--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
 
       <div class="page-center home">
-        <a href="./index.html">
+        <a href="https://leeuwz.nl">
           <img alt="Qries" src="./img/ezgif-5-8fc113484f.gif"
           width="148" height="120">
        </a>
